# Cpp-Stuff

./: .gitignore  README.md
Inter-Process-Communication/: README.md
Inter-Process-Communication/activate-window/: Makefile  WindowActivator.mm  activate-cpp-only-depricated.cpp  main.cpp
Inter-Process-Communication/fifos/: CMakeLists.txt  README.md
Inter-Process-Communication/fifos/src/: IPCServer.cpp  IPCServer.h  IPCServer.mac.h  IPCServer.win.h  test.cpp
Inter-Process-Communication/process-open/: Makefile  README.md  dummy.cpp  process-fork-exec.cpp  process-popen.cpp
multithreading/conditional variables/: README.md  threads-sol.cpp
multithreading/thread-safe-qeueu/: README.md  queue.h  queue.test.cpp
